@@ -1,3 +1,7 @@
+2011-10-08  Mike Frysinger  <vapier@gentoo.org>
+
+	* eu.am [BUILD_WERROR]: Conditionalize -Werror use on this.
+
 2010-07-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* elfutils.spec.in: Add more BuildRequires.
