@@ -6,6 +6,9 @@
 
 2011-10-08  Mike Frysinger  <vapier@gentoo.org>
 
+	* configure.ac (--disable-werror): Handle it, controlling BUILD_WERROR
+	automake option.
+
 	* configure.ac: Fix use of AC_ARG_ENABLE to handle $enableval correctly.
 
 2011-10-02  Ulrich Drepper  <drepper@gmail.com>
